--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -60,9 +60,9 @@
 \newcommand{\loopy}{\Omega} % todo: mathsf
 \newcommand{\susp}{\Sigma} % todo: mathsf
 \newcommand{\simplex}{\Delta} % todo: mathsf
-\newcommand{\simplexn}[1]{\simplex^{#1}}
-\newcommand{\bdsimplex}{\partial\simplex}
-\newcommand{\bdsimplexn}[1]{\partial\simplex({#1})}
+\newcommand{\simplexn}[1]{\simplex({#1})}
+\newcommand{\bdsimplex}{\partial\Dd}
+\newcommand{\bdsimplexn}[1]{\partial\Dd({#1})}
 \newcommand{\ent}{\vdash}
 \newcommand{\adj}{\dashv}
 \newcommand{\re}{\mathcal{R}}%realization
