--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_totals.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_totals.tex
@@ -27,7 +27,7 @@ Now \( \sigma^X_F\defeq\ev(X(m))^{-1}(X_F) \) is the automorphism of \( Tm \) th
 These last two can be concatenated to make a loop. We can then obtain an integer by noting that the automorphisms are a circle \( \loopy_{Tm}(\Kzt)\simeq S^1 \), and recalling the well known fact that loops in the circle are integers: \( \loopy(S^1,\base)\simeq\zz \) (e.g. \cite{hottbook} Corollary 8.1.10).
 \begin{mydef}
 \label{def:index}
-The \defemph{index of the vector field \( X \) on the face \( F \)} is the integer \( I^X_F\defeq\loopy(\flat_F\cdot \sigma^X_F):\loopy(\id=_{Tm=Tm}\id) \).
+The \defemph{index of the vector field \( X \) on the face \( F \)} is the integer \( I^X_F\defeq\flat_F\cdot \sigma^X_F:(\id=_{Tm=Tm}\id) \).
 \end{mydef}
 We now have the final list of ingredients at a single face:
 \begin{equation}
@@ -61,42 +61,42 @@ The \defemph{net holonomy}, \defemph{total flatness}, \defemph{total swirling}, 
 \begin{equation}
 \label{eq:tot_elements}
 \begin{aligned}
-\tr_\tot      & \defeq \sum_F\tr_F &&:Tm=Tm\\
-\flat_\tot    & \defeq \sum_F\flat_F &&:\id=_{Tm=Tm}\tr_\tot\\
-\sigma^X_\tot & \defeq \sum_F\sigma^X_F &&:\tr_\tot=_{Tm=Tm}\id\\
+\tr_\tot      & \defeq \sum_F\tr_F &&:\so\\
+\flat_\tot    & \defeq \sum_F\flat_F &&:\base=_{\so}\tr_\tot\\
+\sigma^X_\tot & \defeq \sum_F\sigma^X_F &&:\tr_\tot=_{\so}\base\\
 I^X_\tot      & \defeq \sum_F I^X_F &&:\zz.
 \end{aligned}
 \end{equation}
 \end{mydef}
 
 The assumption about edges appearing twice, once in each direction, together with Lemma \ref{lem:subtraction} proves the following
-\begin{myprop}The net holonomy is \( 0 \) in \( Tm=Tm \).\label{prop:total_rotation}
+\begin{myprop}The net holonomy is \( 0 \) in \( \so \).\label{prop:total_rotation}
 \end{myprop}
 \begin{myproof}
-With a vector field \( X \) chosen, we can compute \[ \sum_F\tr_F=\left[\sum_{(\mathrm{edges\ }e_{ij})} \rho_{ij}+\rho_{ji}\right]=_{Tm=Tm}0 \] and note that the result does not depend on \( X \).
+With a vector field \( X \) chosen, we can compute \[ \sum_F\tr_F=\left[\sum_{(\mathrm{edges\ }e_{ij})} \rho_{ij}+\rho_{ji}\right]=_{\so}0 \] and note that the result does not depend on \( X \).
 \end{myproof}
 
 \begin{mycor}
-Total flatness is a loop: \( \flat_\tot:\id=_{Tm=Tm}\id \).
+Total flatness is a loop: \( \flat_\tot:\base=_{\so}\base \).
 \end{mycor}\begin{myproof}Follows from Corollary~\ref{prop:total_rotation}.\end{myproof}
 
 And making use of Lemma \ref{lem:cancellation} we obtain
-\begin{myprop}The total swirling is \( \refl_0 \) in \( Tm=Tm \).\label{prop:total_swirling}
+\begin{myprop}The total swirling is \( \refl_0 \) in \( \so \).\label{prop:total_swirling}
 \end{myprop}
 \begin{myproof}We can compute
-\[\sum_F\sigma^X_F=\left[\sum_{(\mathrm{edges\ }e_{ij})}\sigma_{ij}+\sigma_{ji}\right]=_{Tm=Tm}\refl_0.\qedhere\]
+\[\sum_F\sigma^X_F=\left[\sum_{(\mathrm{edges\ }e_{ij})}\sigma_{ij}+\sigma_{ji}\right]=_{\so}\refl_0.\qedhere\]
 \end{myproof}
 
-And finally, if we give the loop map \( \loopy \) the nickname ``winding number'':
+And finally, if we refer to the passage from a loop \( \ell:\base=_{\so} \base \) to the corresopnding integer in \( \loopy\so \) as ``winding number'':
 
 \begin{mythm}\label{thm:total_index_total_curvature}The winding number of total flatness equals the total index.
 \end{mythm}
 \begin{myproof}
-Follows directly from \( I^X_\tot\defeq\loopy(\flat_\tot\cdot \sigma^X_\tot) \) and Proposition~\ref{prop:total_swirling}.
+Follows directly from \( I^X_\tot\defeq\flat_\tot\cdot \sigma^X_\tot \) and Proposition~\ref{prop:total_swirling}.
 \end{myproof}
 
 \begin{mynote}
-The Gauss-Bonnet theorem is often stated in the form \[\frac{1}{2\pi}\int_M K\,dA=\chi(M)\] and although we won't attempt an exhaustive translation between this and our approach, we want to point out that the factor of \( \frac{1}{2\pi} \) is doing exactly what \( \loopy \) is doing for us, which is converting an angle into a winding number. It seems likely that attending fully to constant coefficients in other important formulas can yield conceptual fruit.
+The Gauss-Bonnet theorem is often stated in the form \[\frac{1}{2\pi}\int_M K\,dA=\chi(M)\] and although we won't attempt an exhaustive translation between this and our approach, we want to point out that the factor of \( \frac{1}{2\pi} \) is doing exactly what winding number is doing for us. It seems likely that attending fully to constant coefficients in other important formulas can yield conceptual fruit.
 \end{mynote}
 
 \subsection{Calculation on the sphere}
