--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_appendix.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_appendix.tex
@@ -6,7 +6,7 @@ An internal definition of Euler characteristic is needed to provide the relation
 
 More relationships with discrete differential geometry\cite{crane_ddg}\cite{crane_connections} could be explored.
 
-The results could be formalized. A good starting point is Lemma~\ref{lem:octahedron_sphere} that the octahedron is equivalent to the 2-sphere.
+The results could be formalized. A good starting point is Lemma~\ref{lem:octahedron_sphere} that the octahedron is equivalent to the 2-sphere. A good next step would be to prove that a combinatorial \( n \)-sphere has realization equivalent to the HoTT \( n \)-sphere. This would internalize the function \( \link \).
 
 Our hope is that this note can form the starting point for a complete formulation of the homotopical results of gauge theory and Chern-Weil theory. Classically we know the space of connections is contractible, and the group of based gauge transformations (see below) acts freely on it. Those statements should be easy to make in our framework. In \cite{atiyah1983yang} connections are presented as a splitting of a short exact sequence of bundles. The community has grappled with this picture (see the nLab at \cite{urs_atiyah}), and it deserves clarification in HoTT.
 
