getting html working better: unknown macros, missing images

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -259,7 +259,7 @@
 \newcommand{\hgr}[1]{\llb{#1}\rrb} % higher geometric realization of anonymous data
 \newcommand{\joinrell}{\mathrel{\mkern-3mu}}
 %\newcommand{\Dd}{\Delta\!\!\!\!{\scalebox{0.7}{$\Delta$}}}
-\newcommand{\Dd}{\Delta\mkern-11mu{\scalebox{0.7}{$\Delta$}}}
+\newcommand{\Dd}{\Delta\mkern-11mu{\scalebox{0.7}{\ensuremath{\Delta}}}}
 
 \newenvironment{dedication}
 {\clearpage           % we want a new page
