one-off hacky solution for linking to my one equation cross-ref, that works in PDF and HTML

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_combman.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_combman.tex
@@ -68,7 +68,7 @@ The \defemph{realization \( \mm \) of a 1-dimensional simplicial complex} \( M=[
 \end{mydef}
 \begin{center}
 \input{figs/realization_dim1_tikz.tex}\end{center}
-where \( a_k \) is the attachment data of the edges in \( M_1 \), as in diagram~\ref{eq:attach}. The right vertical map \( *_{\mm_1} \) provides a hub point for each edge, and the homotopy \( h_1 \) provides the spokes that connect the hub to the vertices.
+where \( a_k \) is the attachment data of the edges in \( M_1 \), as in the diagram~\ref{eq:attach}. The right vertical map \( *_{\mm_1} \) provides a hub point for each edge, and the homotopy \( h_1 \) provides the spokes that connect the hub to the vertices.
 
 \begin{mydef}
 The \defemph{simplicial 1-sphere} \( \bdsimplexn{2} \) is the realization of \( \partial \Delta(2) \).
