hyperref was linking to the wrong page, despite the label being right

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -15,10 +15,10 @@
 \graphicspath{ {./img/} }
 
 % changes package, and a bit more room on the right
-\usepackage{todonotes}
-\usepackage[commandnameprefix=ifneeded, todonotes={textsize=tiny}]{changes}
-\definechangesauthor[name=Greg, color=blue]{Greg}
-\setlength{\marginparwidth}{1in}
+% \usepackage{todonotes}
+% \usepackage[commandnameprefix=ifneeded, todonotes={textsize=tiny}]{changes}
+% \definechangesauthor[name=Greg, color=blue]{Greg}
+% \setlength{\marginparwidth}{1in}
 \geometry{margin=1in}
 
 \renewenvironment{abstract}{\section*{\abstractname}}{}
