--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -22,7 +22,7 @@
 \RequirePackage{graphicx}
 \RequirePackage{float}
 \PassOptionsToPackage{hyphens}{url}
-\RequirePackage{hyperref}
+\RequirePackage[hypertexnames = false]{hyperref}
 \RequirePackage[numbers]{natbib}
 \RequirePackage{parskip} % removes paragraph indent, adds vertical space
 \RequirePackage{mathtools}
