dusted things off, fixed a typo, fixed the previous issue with hyperref better

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk.tex
@@ -1,4 +1,4 @@
-\documentclass[13pt,aspectratio=169]{beamer}
+\documentclass[13pt,aspectratio=169,hyperref={hypertexnames = false}]{beamer}
 \usetheme{default}
 
 % something tries to renewcommand these but beamer must break the assumption that they are defined so I am defining them
