--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk_totals.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk_totals.tex
@@ -54,7 +54,7 @@ Swirling involves concatenating dependent paths. Can we simplify that?
 \item \( p\dotcirc q=(p\dotcirc b)\cdot q. \)
 \end{itemize}
 \item<4-> Lemma: \( \sij\dotcirc\sji=\refl_{\base} \).
-\item<5-> Proof: \( \apd(X)(\refl)=\refl\) \(\implies \Xij\cdot \Tij\Xji=\refl_{X_i}\) \(\implies\sij\dotcirc\sji=\refl_{\base} \) (\( \Tij \) just translates \( \Xji \) to cat with \( \Xji \)).
+\item<5-> Proof: \( \apd(X)(\refl)=\refl\) \(\implies \Xij\cdot \Tij\Xji=\refl_{X_i}\) \(\implies\sij\dotcirc\sji=\refl_{\base} \) (\( \Tij \) just translates \( \Xji \) to cat with \( \Xij \)).
 \end{itemize}
 \end{column}
 \begin{column}{0.35\textwidth}
