--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -11,7 +11,7 @@
 \RequirePackage{multicol}
 \RequirePackage{thmtools}
 
-\RequirePackage{agda}
+%\RequirePackage{agda}
 % tipa is redefining the semicolon and bang
 \let\semicolon\;
 \let\bang\!
@@ -22,7 +22,7 @@
 \RequirePackage{graphicx}
 \RequirePackage{float}
 \PassOptionsToPackage{hyphens}{url}
-\RequirePackage[hypertexnames = false]{hyperref}
+\RequirePackage{hyperref}
 \RequirePackage[numbers]{natbib}
 \RequirePackage{parskip} % removes paragraph indent, adds vertical space
 \RequirePackage{mathtools}
