adding some placeholder questions that might be beneficial to discuss in talks

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk.tex
@@ -9,6 +9,7 @@
 
 \renewcommand{\mathrm}[1]{\mathsf{#1}}
 \usepackage{greg}
+\usepackage{array}
 \renewcommand{\defemph}[1]{\alert{#1}}
 
 \useinnertheme{circles}
@@ -78,4 +79,44 @@
 \alert{\huge{Thank you!}}
 \end{center}
 \end{frame}
+
+\section{Appendix}
+\begin{frame}{Dictionary}
+\begin{tabular}{|p{18em}|p{18em}|}
+\hline
+Connections are 1-forms on \( P \) not on \( M \) & \( T(e_{ij}):T_i=T_j \), which is not a loop. \\ \hline
+Space of connections for a given \( P \) is contractible. & \\ \hline
+Euler class & \\ \hline
+\end{tabular}
+\end{frame}
+
+\begin{frame}{Dictionary}
+\begin{tabular}{|p{18em}|p{18em}|}
+\hline
+Poincare dual & \\ \hline
+Leibniz rule & \\ \hline
+Transport is not infinitesimal & \\ \hline
+\end{tabular}
+\end{frame}
+
+\begin{frame}{Dictionary}
+\begin{tabular}{|p{18em}|p{18em}|}
+\hline
+State a thm like: if \( w_1, w_2 \) and \( c_1 \) are equal on \( P_1, P_2 \) then \( P_1=P_2 \) & \\ \hline
+Is cohomology about the type of maps, and \( F \) gives a term? & \\ \hline
+Hopf fibration should give another map \( \oo_2\to\EMzo \). & \\ \hline
+\end{tabular}
+\end{frame}
+
+\begin{frame}{Dictionary}
+\begin{tabular}{|p{18em}|p{18em}|}
+\hline
+Maurer-Cartan form. & \\ \hline
+Gauge transformations acting on connections and maybe functions (YM) of connections. & \\ \hline
+The based gauge group acts freely on connections. & \\ \hline
+\end{tabular}
+\end{frame}
 \end{document}
+
+
+
