--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk_vector_fields.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk_vector_fields.tex
@@ -195,7 +195,7 @@ An example of \alert{swirling} and \alert{index} at this face.
 \flat_F&\defeq \flat(\partial F)&&:\id=_{(T_1=_{BS^1}T_1)}\tr_F&&\text{\alert{flatness}}\\
 X_F&\defeq X(\partial F)&&:\tr_F(X_1)=_{T_1}X_1&&\text{\alert{swirling}}\\
 \end{aligned}\]
-\onslide<3->{({\itshape Recall that \( T_1 \) being an \( S^1 \)-torsor means we can use subtraction to obtain an equivalence \( s(-,X_1):T_1\xrightarrow[]{x\mapsto x\alert{-X_1}} S^1 \).})}
+\onslide<3->{({\itshape Recall that \( T_1 \) being an \( S^1 \)-torsor means we can use subtraction to obtain an equivalence \( s(-,X_1):T_1\xrightarrow[]{x\mapsto x\alert{-X_1}} S^1 \). TODO: prep this earlier.})}
 \onslide<2->{
 \begin{columns}[c]
 \begin{column}{0.7\textwidth}
