--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_appendix.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_appendix.tex
@@ -15,5 +15,5 @@ The paper of Freed and Hopkins\cite{freed2013chernweil} seeks a classifying spac
 \subsection{Gauge transformations}
 \begin{mydef}
 \label{sec:automorphisms}
-Suppose we have \( T:M\to\EMzo \) and \( P\defeq\sit{x:M}Tx \). Then we can form the type family \( \Aut T:M\to\uni \) given by \( \Aut T(x)\defeq(Tx=Tx) \). The total space \( \Aut P\defeq\sit{x:M}(Tx=Tx) \), which is a bundle of groups, is called the \defemph{automorphism bundle} or the \defemph{gauge bundle} and sections \( \pit{x:M}(Tx=Tx) \), which are homotopies \( T\sim T \), are called \defemph{automorphisms of \( P \)} or \defemph{gauge transformations}. If \( m:M \) is a basepoint and if \( p:Tm \) is a basepoint in the fiber at \( m \), then the \defemph{pointed automorphisms of \( P \)} or \defemph{based gauge transformations}.
+Suppose we have \( T:M\to\EMzo \) and \( P\defeq\sit{x:M}Tx \). Then we can form the type family \( \Aut T:M\to\uni \) given by \( \Aut T(x)\defeq(Tx=Tx) \). The total space \( \Aut P\defeq\sit{x:M}(Tx=Tx) \), which is a bundle of groups, is called the \defemph{automorphism bundle} or the \defemph{gauge bundle} and sections \( \pit{x:M}(Tx=Tx) \), which are homotopies \( T\sim T \), are called \defemph{automorphisms of \( P \)} or \defemph{gauge transformations}. If \( m:M \) is a basepoint and if \( p:Tm \) is a basepoint in the fiber at \( m \), then the \defemph{pointed automorphisms of \( P \)} are called \defemph{based gauge transformations}.
 \end{mydef}
